tests/negative/regression/r27.orng
fn main() -> Int { 
    while let ident : while true ; impl for fn ( ) -> Int { } { } { } ; true { } 
}